# RayTracing

./: AreaLight.h  CMakeLists.txt  Camera.h  Collision.h  Color.h  Light.h  Material.h  Object.h  Plane.h  PointLight.h  RayTracer.h  Raytracing.h  Rectangle.h  Scene.h  Sphere.h  Vec3.h  main.cpp  scene.txt  test.txt
